--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,13 @@
     <color name="colorPrimary">#3F51B5</color>
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="color1">#aec4e9</color>
+    <color name="color2">#cfdcf5</color>
+    <color name="color3">#e9effc</color>
+    <color name="white">#ffffff</color>
+    <color name="progress_color_red">#f47878</color>
+    <color name="progress_color_blue">#7e9bdb</color>
+    <color name="progress_color_green">#82c78b</color>
+
+
 </resources>
